name:                techblog
version:             2.0.2.1
synopsis:            Techblog is a ROSEdu (http://www.rosedu.org) technical
                     blogging project.
description:         Techblog is a ROSEdu (http://www.rosedu.org) technical
                     blogging project aiming to collect technical articles
                     related to Operating Systems, Kernel Programming,
                     Artificial Intelligence, Programming Languages and
                     Compilers, contests and hackathons. Everything is Open
                     Source.
homepage:            http://techblog.rosedu.org
license:             PublicDomain
license-file:        LICENSE
author:              ROSEdu members
maintainer:          techblog@rosedu.org
copyright:           © 2013 ROSEdu
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable techblog
  main-is:          site.hs
  ghc-options:      -Wall -O2
  default-language: Haskell2010
  -- Don't use bounds because we want to be able to build it anyway
  build-depends:
    base >= 4.6,
    blaze-html >= 0.7,
    cmdargs >= 0.10,
    containers >= 0.5,
    hakyll >= 4.6,
    process >= 1.2,
    pandoc >= 1.13
